crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@128.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select count(*) from tenk1 group by twenty;
---
SelectStmt@0..43
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..26
    Ident@21..26 "tenk1"
  Whitespace@26..27 " "
  GroupP@27..32 "group"
  Whitespace@32..33 " "
  By@33..35 "by"
  Whitespace@35..36 " "
  ColumnRef@36..42
    Ident@36..42 "twenty"
  Ascii59@42..43 ";"

