crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@140.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from\n  (select string4, count(unique2)\n   from tenk1 group by string4 order by string4) ss\n  right join (values (1),(2),(3)) v(x) on true;"
---
SelectStmt@0..147
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Newline@13..14 "\n"
  Whitespace@14..16 "  "
  Ascii40@16..17 "("
  JoinExpr@17..146
    RangeSubselect@17..99
      SelectStmt@17..95
        Select@17..23 "select"
        Whitespace@23..24 " "
        ResTarget@24..31
          ColumnRef@24..31
            Ident@24..31 "string4"
        Ascii44@31..32 ","
        Whitespace@32..33 " "
        ResTarget@33..46
          FuncCall@33..46
            Ident@33..38 "count"
            Ascii40@38..39 "("
            ColumnRef@39..46
              Ident@39..46 "unique2"
        Ascii41@46..47 ")"
        Newline@47..48 "\n"
        Whitespace@48..51 "   "
        From@51..55 "from"
        Whitespace@55..56 " "
        RangeVar@56..61
          Ident@56..61 "tenk1"
        Whitespace@61..62 " "
        GroupP@62..67 "group"
        Whitespace@67..68 " "
        By@68..70 "by"
        Whitespace@70..71 " "
        ColumnRef@71..78
          Ident@71..78 "string4"
        Whitespace@78..79 " "
        SortBy@79..95
          Order@79..84 "order"
          Whitespace@84..85 " "
          By@85..87 "by"
          Whitespace@87..88 " "
          ColumnRef@88..95
            Ident@88..95 "string4"
      Ascii41@95..96 ")"
      Whitespace@96..97 " "
      Alias@97..99
        Ident@97..99 "ss"
    Newline@99..100 "\n"
    Whitespace@100..102 "  "
    Right@102..107 "right"
    Whitespace@107..108 " "
    Join@108..112 "join"
    Whitespace@112..113 " "
    Ascii40@113..114 "("
    RangeSubselect@114..137
      SelectStmt@114..131
        Values@114..120 "values"
        Whitespace@120..121 " "
        Ascii40@121..122 "("
        List@122..123
          AConst@122..123
            Iconst@122..123 "1"
        Ascii41@123..124 ")"
        Ascii44@124..125 ","
        Ascii40@125..126 "("
        List@126..127
          AConst@126..127
            Iconst@126..127 "2"
        Ascii41@127..128 ")"
        Ascii44@128..129 ","
        Ascii40@129..130 "("
        List@130..131
          AConst@130..131
            Iconst@130..131 "3"
      Ascii41@131..132 ")"
      Ascii41@132..133 ")"
      Whitespace@133..134 " "
      Alias@134..137
        Ident@134..135 "v"
        Ascii40@135..136 "("
        Ident@136..137 "x"
    Ascii41@137..138 ")"
    Whitespace@138..139 " "
    On@139..141 "on"
    Whitespace@141..142 " "
    AConst@142..146
      TrueP@142..146 "true"
  Ascii59@146..147 ";"

