crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@144.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select avg(unique1::int8) from tenk1;"
---
SelectStmt@0..37
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..24
    FuncCall@7..24
      Ident@7..10 "avg"
      Ascii40@10..11 "("
      TypeCast@11..24
        ColumnRef@11..18
          Ident@11..18 "unique1"
        Typecast@18..20 "::"
        TypeName@20..24
          Ident@20..24 "int8"
  Ascii41@24..25 ")"
  Whitespace@25..26 " "
  From@26..30 "from"
  Whitespace@30..31 " "
  RangeVar@31..36
    Ident@31..36 "tenk1"
  Ascii59@36..37 ";"

