crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@167.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set role regress_parallel_worker;
---
VariableSetStmt@0..33
  Set@0..3 "set"
  Whitespace@3..4 " "
  Role@4..8 "role"
  Whitespace@8..9 " "
  AConst@9..32
    Ident@9..32 "regress_parallel_worker"
  Ascii59@32..33 ";"

