crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@171.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select count(*) from tenk1;
---
SelectStmt@0..27
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..26
    Ident@21..26 "tenk1"
  Ascii59@26..27 ";"

