crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@182.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select (stringu1 || repeat('abcd', 5000))::int2 from tenk1 where unique1 = 1;"
---
SelectStmt@0..77
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..47
    Ascii40@7..8 "("
    TypeCast@8..47
      AExpr@8..39
        ColumnRef@8..16
          Ident@8..16 "stringu1"
        Whitespace@16..17 " "
        Op@17..19 "||"
        Whitespace@19..20 " "
        FuncCall@20..39
          Ident@20..26 "repeat"
          Ascii40@26..27 "("
          AConst@27..33
            Sconst@27..33 "'abcd'"
          Ascii44@33..34 ","
          Whitespace@34..35 " "
          AConst@35..39
            Iconst@35..39 "5000"
      Ascii41@39..40 ")"
      Ascii41@40..41 ")"
      Typecast@41..43 "::"
      TypeName@43..47
        Ident@43..47 "int2"
  Whitespace@47..48 " "
  From@48..52 "from"
  Whitespace@52..53 " "
  RangeVar@53..58
    Ident@53..58 "tenk1"
  Whitespace@58..59 " "
  Where@59..64 "where"
  Whitespace@64..65 " "
  AExpr@65..76
    ColumnRef@65..72
      Ident@65..72 "unique1"
    Whitespace@72..73 " "
    Ascii61@73..74 "="
    Whitespace@74..75 " "
    AConst@75..76
      Iconst@75..76 "1"
  Ascii59@76..77 ";"

