crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@193.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE fooarr(f1 text, f2 int[], f3 text);"
---
CreateStmt@0..48
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "fooarr"
  Ascii40@19..20 "("
  ColumnDef@20..27
    Ident@20..22 "f1"
    Whitespace@22..23 " "
    TypeName@23..27
      TextP@23..27 "text"
  Ascii44@27..28 ","
  Whitespace@28..29 " "
  ColumnDef@29..35
    Ident@29..31 "f2"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Ascii91@35..36 "["
  Ascii93@36..37 "]"
  Ascii44@37..38 ","
  Whitespace@38..39 " "
  ColumnDef@39..46
    Ident@39..41 "f3"
    Whitespace@41..42 " "
    TypeName@42..46
      TextP@42..46 "text"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

