crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@194.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO fooarr VALUES('1', ARRAY[1,2], 'one');"
---
InsertStmt@0..50
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "fooarr"
  Whitespace@18..19 " "
  SelectStmt@19..48
    Values@19..25 "VALUES"
    Ascii40@25..26 "("
    List@26..48
      AConst@26..29
        Sconst@26..29 "'1'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AArrayExpr@31..40
        Array@31..36 "ARRAY"
        Ascii91@36..37 "["
        AConst@37..38
          Iconst@37..38 "1"
        Ascii44@38..39 ","
        AConst@39..40
          Iconst@39..40 "2"
      Ascii93@40..41 "]"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..48
        Sconst@43..48 "'one'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

