crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: begin;
---
TransactionStmt@0..6
  BeginP@0..5 "begin"
  Ascii59@5..6 ";"

